<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation items. Order = left→right; must mirror the tab order in MainActivity. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_today"
        android:icon="@drawable/ic_book"
        android:title="@string/today" />

    <item
        android:id="@+id/nav_adhkar"
        android:icon="@drawable/ic_adhkar"
        android:title="@string/adhkar" />

    <item
        android:id="@+id/nav_prayers"
        android:icon="@drawable/ic_mosque"
        android:title="@string/prayers" />

    <item
        android:id="@+id/nav_qadaa"
        android:icon="@drawable/ic_list"
        android:title="@string/more_qadaa" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_profile"
        android:title="@string/more" />
</menu>
